# haskell-programming-from-first-principles-solutions

ch10/: chapter_exercises.hs  database_processing.hs  scans.hs  understanding_folds.hs
ch11/: as_patterns.hs  binary_tree.hs  cardinalities.hs  dog_types.hs  for_example.hs  garden.hs  huttons_razor.hs  language_exercises.hs  logic_goats.hs  multiple_choice.hs  pity_the_bool.hs  programmers.hs  the_quad.hs  vehicles.hs  vigenere_cipher.hs
ch12/: binary_tree.hs  determine_the_kinds.hs  library_either.hs  library_maybe.hs  natural.hs  string_processing.hs  unfolds.hs  validate_the_word.hs
ch13/: gimme_person.hs  intermission_1.hs  main_test.hs
ch14_some_years_later/chapter-exercises-quickcheck/: chapter-exercises-quickcheck.cabal
ch14_some_years_later/chapter-exercises-quickcheck/src/: Main.hs
ch14_some_years_later/morse_code/morse/: morse.cabal
ch14_some_years_later/morse_code/morse/app/: Main.hs
ch14_some_years_later/morse_code/morse/src/: Morse.hs
ch14_some_years_later/morse_code/morse/tests/: tests.hs
ch15/: madness.hs  optional_monoid.hs  semigroup_monoid.hs
ch16/: be_kind.hs  chapter_exercises.hs  chapter_exercises_rearrange.hs  chapter_exercises_write_instances.hs  either_copy.hs  heavy_lifting.hs  instances_of_func.hs  possibly.hs  stacked_functors_typecheck.hs
ch17/: chapter_exercises.hs  combinations.hs  constant.hs  fixer_upper.hs  identity.hs  list_applicative.hs  lookups.hs  validation.hs  ziplist_applicative.hs
ch18/: bind.hs  chapter_exercises_functions.hs  chapter_exercises_monad_instances.hs  desugar.hs  either_monad.hs  list_monad.hs
ch2/: fun_with_functions.hs  parenthesization.hs
ch20/: chapter_exercises.hs  library_functions.hs
ch21/: traversable_instances.hs
ch22/: ask.hs  boopdoop.hs  chapter_exercises.hs  reader_monad_implementation.hs  reading_comprehension.hs  warmup.hs
ch23/: chapter_exercises.hs  fizzbuzz.hs  state.hs
ch23/roll_your_own/roll-your-own/: README.md  roll-your-own.cabal
ch23/roll_your_own/roll-your-own/.stack-work/: stack.sqlite3
ch23/roll_your_own/roll-your-own/.stack-work/ghci/41a68974/: cabal_macros.h
ch23/roll_your_own/roll-your-own/.stack-work/ghci/c0cb849b/: cabal_macros.h
ch23/roll_your_own/roll-your-own/.stack-work/ghci/c444321b/: cabal_macros.h
ch23/roll_your_own/roll-your-own/src/: Main.hs
ch25/: bifunctor.hs  doing_it_badly.hs  gotcha.hs  identity_compose.hs  identity_t.hs
ch25_some_years_later/: bifunctor.hs  ch25.hs  ch25_8.hs
ch26/: chapter_exercises.hs  eithert.hs  fix_the_code.hs  hypothetical_exercise.hs  identity_t.hs  maybet.hs  readert.hs  statet.hs  wrapitup.hs
ch26_some_years_later/: ch25_8_with_monad_trans.hs  ch26.hs  outer_inner.hs
ch27/: bang_patterns.hs  core_dump.hs  evaluate.hs  expression_bottom.hs  hypo.hs  make_it_bottom.hs  sprint.hs  strict_data.hs  strict_list.hs
ch27_some_years_later/: bang.hs  banglist.hs  banglist2.hs  banglist3.hs  banglist4.hs  ch27.hs  exercise_result_bottom.hs  make_it_bottom.hs  pointfree_vs_named_arguments.hs  strict.hs  strictlist.hs  trace.hs
ch28_some_years_later/: bla
ch29_some_years_later/: blahwoot.hs  notiz
ch3/: building_functions.hs  reading_syntax.hs
ch30/: stop_the_party.hs  try.hs  write_pls.hs
ch30_some_years_later/: bottom_exceptions.hs  notiz  our_own_errors.hs  try_except.hs  try_except_2.hs  why_some_exception.hs  write_pls.hs
ch4/: chapter_exercises.hs  reading_syntax.hs
ch5/: determine_the_type.hs  does_it_compile.hs  fix_it.hs  fix_it_2.hs  given_a_type_write_a_function.hs  intermission_exercises_1.hs  intermission_exercises_2.hs  intermission_exercises_3.hs  intermission_exercises_4.hs  multiple_choice.hs  type_kwon_do.hs  type_variable_or_constructor.hs  write_a_type_signature.hs
ch6/: datatype_declaration.hs  intermission_exercises_2.hs  match_the_types.hs  multiple_choice.hs  type_kwon_do.hs  typecheck.hs
ch7/: arith4.hs  artful_dodgy.hs  case_practice.hs  chapter_exercises_lets_write_code.hs  grab_bag.hs  (+3 more)
(+51 files in other folders)
