cabal-version:       2.2

name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/morse#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Text
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:  Morse
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >= 4.7 && <5
              , containers
              , QuickCheck
  hs-source-dirs:   src
  default-language: Haskell2010

executable morse
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , containers
                      , morse
                      , QuickCheck
  ghc-options:         -Wall
                       -fwarn-tabs
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite tests
    ghc-options:      Wall -fno-warn-orphans
    type:             exitcode-stdio-1.0
    main-is:          tests.hs
    hs-source-dirs:   tests
    build-depends:    base
                    , containers
                    , morse
                    , QuickCheck
    default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/morse
